--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,8 @@
+---
+---
+
+@import "minima";
+
 pre, code { background-color: transparent }
 .highlighter-rouge .highlight { background-color: #404040; color: #d0d0d0 }
 code.highlighter-rouge { color: #AAAAAA }
